cadastros de serviços, categorias funcionando, produtos com alguns baugs ainda
